arregla vista tablet 10 vertical

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -15,6 +15,10 @@
   display: flex;
   flex-flow: row wrap;
 }
+/* tablet vertical */
+@media (max-width: 1023px) {
+  .first {
+    max-width: 44%; } }
 /*  vista movil */
 @media (max-width: 567px) {
   .first {
