--- a/www/templates/evento.html
+++ b/www/templates/evento.html
@@ -17,8 +17,9 @@
 
         <h3 class="liso">Horario: </h3>
           <div class="evpre pegado" ng-show="evento.horario_t" ng-bind-html="evento.horario_t"></div>
-          <div class="evpre pegado">Del {{evento.fechaInicio_dt | date:'dd-MMM-yy'}} al {{evento.fechaFinal_dt | date:'dd-MMM-yy'}}</div>
-          <p ng-hide="evento.horario_t">Información no disponible</p>
+          <p ng-hide="evento.horario_t">Horario no disponible</p>
+          <div ng-show="evento.fechaInicio_dt != evento.fechaFinal_dt" class="evpre pegado">Desde: {{evento.fechaInicio_dt | date:'fullDate'}} <br>Hasta: {{evento.fechaFinal_dt | date:'fullDate'}}</div>
+          <div ng-show="evento.fechaInicio_dt == evento.fechaFinal_dt" class="evpre pegado">El {{evento.fechaInicio_dt | date:'fullDate'}}</div>
         <h3 class="liso">Precio: </h3>
           <div class="evpre pegado" ng-show="evento.entrada_t" ng-bind-html="evento.entrada_t"></div>
           <div class="evpre pegado" ng-hide="evento.entrada_t">Información no disponible</div>
