--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -22,10 +22,10 @@
           <i class="icon ion-ios-bookmarks"></i>
           Qué hacer Hoy
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/pilares" class="item item-icon-left">
+<!--         <ion-item nav-clear menu-close href="#/app/pilares" class="item item-icon-left">
           <i class="icon pilar-icon"></i>
           Pilares 2015
-        </ion-item>
+        </ion-item> -->
         <ion-item nav-clear menu-close href="#/app/destacados" class="item item-icon-left assertive">
           <i class="icon ion-arrow-graph-up-right"></i>
           Destacados
