Arregla título de pilares-evento
No entiendo porqué no va, si está igual que destacado y evento... ¿cache?

--- a/www/templates/pilares-evento.html
+++ b/www/templates/pilares-evento.html
@@ -1,4 +1,5 @@
-<ion-view view-title="{{evento.title.value}}">
+<ion-view>
+<ion-nav-title>{{evento.title.value}}</ion-nav-title>
   <ion-content>
     <div class="list card">
 
