Links al vídeo promocional en Equipo y Acerca de

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -15,10 +15,6 @@
                   <img src="https://cmsresources.windowsphone.com/devcenter/en-us/legacy_v1/img/badgegenerator/Spanish_wstore_rev_cyan_258x67.png" alt="Download from Windows Store" />
                 </a>
                 <pre class="evpre nobottom">
-App inicialmente desarrollada durante el hackaton ZgzAppStore (21-22 de marzo 2015, en el edificio Etopia, Zaragoza).
-
-Podrás ver los eventos de hoy ordenados por hora, o buscar eventos para la próxima semana en las diferentes categorías (exposiciones, música, infantil...). Consulta sus detalles incluyendo horario y precio, incluso podrás ver la ruta para llegar al lugar... ¡y no te olvides compartirlo en tus redes sociales! Ah, y si algún evento te llama la atención, guárdalo en favoritos.
-
 LaAgendica es un proyecto sin ánimo de lucro y de código abierto, que puedes consultar en <a href="https://github.com/jrub/LaAgendica" target="_blank">Github</a>. LaAgendica utiliza las fuentes de datos abiertos proporcionadas por el Ayuntamiento de Zaragoza, para más información consultar: <a href="http://datosabiertos.zaragoza.es" target="_blank">datosabiertos.zaragoza.es</a>
 
 LaAgendica está disponible como App para Android y iPhone, pero puedes usarla como WebApp desde el navegador en cualquier plataforma, así que... ¡pásales la web a tus amigos!: <a href="http://www.laAgendica.com" target="_blank">www.LaAgendica.com</a>
@@ -37,6 +33,10 @@ La App es Open Source, y la mantenemos en nuestro tiempo libre ¿Nos ayudas a di
                     <a class="tab-item item-text-wrap" href="https://github.com/jrub/LaAgendica" target="_blank">
                         <i class="icon ion-social-octocat"></i>
                       Ver código fuente
+                    </a>
+                    <a class="tab-item item-text-wrap" href="https://www.youtube.com/watch?v=ns5yrGtIQEk" target="_blank">
+                        <i class="icon ion-social-youtube assertive"></i>
+                      Ver vídeo
                     </a>
                     <a class="tab-item item-text-wrap" href="https://twitter.com/intent/follow?screen_name=LaAgendica&lang=es" target="_blank">
                         <i class="icon ion-social-twitter positive"></i>
