--- a/www/templates/team.html
+++ b/www/templates/team.html
@@ -33,7 +33,7 @@
       </ion-item>
     </ion-list>
     <pre class="evpre nobottom" style="padding: 16px;">
-Nuestro agradecimiento a <a href='' ng-click="abrir('http://www.conmisojos.com')">Fernando Sánchez</a> por el diseño del logo de LaAgendica y la ayuda con la realización del vídeo promocional. ¡Mil gracias Fer!
+Nuestro agradecimiento a <a href='' ng-click="abrir('http://www.conmisojos.com')">Fernando Sánchez</a> por el diseño del logo de LaAgendica y la ayuda con la realización del <a href='' ng-click="abrir('https://www.youtube.com/watch?v=ns5yrGtIQEk')">vídeo promocional</a>. ¡Mil gracias Fer!
     </pre>
   </ion-content>
 </ion-view>
