Si las llamadas al SPARQL del Ayto fallan, explicarlo

--- a/www/templates/destacados.html
+++ b/www/templates/destacados.html
@@ -14,7 +14,7 @@
 
       </ion-item>
     </ion-list>
-    <div class="list card" ng-hide="hayEventos" style="text-align:center">
+    <div class="list card assertive" ng-hide="eventos" style="text-align:center">
       <a href="#" class="item item-icon-left item-text-wrap">
         <i class="icon ion-android-sad"></i>
         {{textoNoContent}}
