--- a/www/templates/hoy.html
+++ b/www/templates/hoy.html
@@ -14,5 +14,11 @@
         <p ng-hide="evento.startTime.value">Múltiples horarios</p>
       </ion-item>
     </ion-list>
+    <div class="list card assertive" ng-hide="eventos" style="text-align:center">
+      <a href="#" class="item item-icon-left item-text-wrap">
+        <i class="icon ion-android-sad"></i>
+        {{textoNoContent}}
+      </a>
+    </div>
   </ion-content>
 </ion-view>
