--- a/www/templates/hoy.html
+++ b/www/templates/hoy.html
@@ -14,7 +14,7 @@
         <p ng-hide="evento.startTime.value">Múltiples horarios</p>
       </ion-item>
     </ion-list>
-    <div class="list card assertive" ng-hide="eventos" style="text-align:center">
+    <div class="list card assertive" ng-hide="hayEventos" style="text-align:center">
       <a href="#" class="item item-icon-left item-text-wrap">
         <i class="icon ion-android-sad"></i>
         {{textoNoContent}}
