Change titles of Team and About

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -1,4 +1,4 @@
-<ion-view view-title="La Agendica - Acerca de">
+<ion-view view-title="Acerca de La Agendica">
   <ion-content>
         <div class="list card">
             <div class="item item-body">
