--- a/www/templates/team.html
+++ b/www/templates/team.html
@@ -1,4 +1,4 @@
-<ion-view view-title="La Agendica - Equipo">
+<ion-view view-title="El equipo de La Agendica">
   <ion-content>
     <ion-list>
       <ion-item ng-repeat="miembro in members">
