--- a/www/templates/eventos.html
+++ b/www/templates/eventos.html
@@ -1,4 +1,4 @@
-<ion-view view-title="La Agendica - {{eventos.nav}}">
+<ion-view view-title="La Agendica {{'- ' + title}}">
   <ion-content>
     <ion-list ng-show="hayEventos">
       <ion-item class="item-text-wrap" ng-repeat="evento in eventos" href="#/app/evento/{{$index}}">
