--- a/www/templates/hoy.html
+++ b/www/templates/hoy.html
@@ -7,7 +7,7 @@
     <ion-list>
       <ion-item class="item-thumbnail-left" collection-repeat="evento in eventos | orderBy : 'startTime.value'" href="#/app/hoy/{{evento.id.value}}">
         <img ng-show="evento.image" src="http:{{evento.image.value}}"/>
-        <img class="list-thumb" ng-hide="evento.image" src='https://raw.githubusercontent.com/jrub/LaAgendica/master/resources/icon.png'/>
+        <img class="list-thumb" ng-hide="evento.image" src='img/default-thumb.png'/>
         <h2>{{evento.title.value}}</h2>
         <h3 class="evpre" ng-show="evento.lugar">{{evento.lugar.value}}</h3>
         <p ng-show="evento.startTime.value">{{evento.startTime.value}} <span ng-show="evento.endTime.value">a</span> {{evento.endTime.value}}</p>
