--- a/www/templates/pilares-evento.html
+++ b/www/templates/pilares-evento.html
@@ -5,7 +5,7 @@
 
       <div class="item item-avatar item-text-wrap item-icon-left assertive">
         <img ng-show="evento.image" ng-src="http:{{evento.image.value}}">
-        <img class="detail-thumb" ng-hide="evento.image" src='https://raw.githubusercontent.com/jrub/LaAgendica/master/resources/favicon-32x32.png'/>
+        <img class="detail-thumb" ng-hide="evento.image" src='img/default-thumb.png'/>
         <h2>{{evento.title.value}}</h2>
         <h3 class="evpre" ng-show="evento.lugar.value">{{evento.lugar.value}}</h3>
       </div>
